1.1.0 (not here, probably won't do)
* option to merge the separate mp4 files into one
* option to not use the command line?

1.0.1
* changed default video settings, updated AHK script

1.0.0 "done"
* better command line inputs
* program generates the wav, then png, then mp4 file for each line (instead of *every* wav, then png, then mp4)

0.9.0
* word censoring
* AHK script QoL update: constants at top

0.8.0 "initial release"
* comment splitting
* comment to wav, png, and mp4
    * option for different wav and png inputs
* AHK script for Kdenlive

GitHub: https://github.com/tanksdude/automated-reddit-video-tool