@@ -52,10 +52,10 @@ Steps:
 0. install the programs listed above (or change the script as you need)
 1. Obtain the comment you wish to be read aloud. Paste it into a text file.
 2. (Non-developer step) Open the command line and `cd` to where you placed this project. For example, `cd C:/Users/<name>/Desktop/automated-reddit-video-tool`.
-3. Split the comment by sentences: `py -3 comment_splitter.py [comment input file] [line-by-line output name]` (non-developers: run this through the command line)
+3. Split the comment by sentences: `python comment_splitter.py [comment input file] [line-by-line output name]` (non-developers: run this through the command line)
 4. (Optional) Manually edit the output file to adjust anything you want. For example, extra pauses when reading a comma-separated list or splitting after emojis.
-5. (Optional) Generate a test image of the full comment, so you can change the font size and image size and stuff: `py -3 comment_test_image.py [line-by-line input file] [png file output name]`
-6. Take that output and have it read aloud: `py -3 comment_to_speech.py [line-by-line input file] [mp4 file names]` (have a "$" in the MP4 name, because that's where the numbers will go)
+5. (Optional) Generate a test image of the full comment, so you can change the font size and image size and stuff: `python comment_test_image.py [line-by-line input file] [png file output name]`
+6. Take that output and have it read aloud: `python comment_to_speech.py [line-by-line input file] [mp4 file names]` (have a "$" in the MP4 name, because that's where the numbers will go)
 7. Note: To edit the parameters of the final output, you will need to edit the constants at the top of `comment_to_speech.py`. The font is Verdana because that's what Reddit uses.
 8. Throw the MP4 files into your favorite video editor and do what you want!
 9. (Optional) There's an AutoHotkey script included with this project (`kdenlive_size_adjustment.ahk`) to speed up editing in Kdenlive, since Kdenlive scales the video and I didn't want that.
@@ -64,19 +64,23 @@ There are ways to further automate this process but that's beyond the scope of t
 
 ### Bonus
 
-Want the words to be censored? No problem!
+#### Want the words to be censored? No problem!
 
 Make a file in the form `bad1|censored1 bad2|censored2 bad3|censored3 ...` (but replace spaces with newlines), and keep in mind that the word replacement is case-sensitive.
 
-Then `py -3 comment_splitter.py [input comment file] [split comment file] -c [censored words file]`
+Then `python comment_splitter.py [input comment file] [split comment file] -c [censored words file]`
 
-Want the words spoken to be slightly different than the text that appears (since sometimes the text-to-speech voices introduce pauses where most people wouldn't pause)? No problem!
+#### Want the words spoken to be slightly different than the text that appears (since sometimes the text-to-speech voices introduce pauses where most people wouldn't pause)? No problem!
 
-`py -3 comment_to_speech.py [line-by-line speech text input file] [mp4 file names] -t [line-by-line image text input file]`
+`python comment_to_speech.py [line-by-line speech text input file] [mp4 file names] -t [line-by-line image text input file]`
+
+#### Want to replace just one mis-formatted video? No problem!
+
+`python comment_to_speech.py [rest of args] -n [video number]`
 
 ### Known Emoji Problem
 
-Emojis don't render with full color. Probably a problem with ImageMagick.
+Emojis don't render with full color. Likely an issue about rendering them as raw Unicode characters or something, I dunno. Happens because ImageMagick is fed Markdown text, proper solution is to use a browser or something (but that's complicated).
 
 ### Known Usability Problem
 
