@@ -11,10 +11,10 @@ Usage steps:
 0. install the necessary programs
 1. Obtain the comment you wish to be read aloud. Paste it into a text file.
 2. (Non-developer step) Open the command line and `cd` to where you placed this project. For example, `cd C:/Users/<name>/Desktop/automated-reddit-video-tool`.
-3. Split the comment by sentences: `py -3 comment_splitter.py [comment input file] [line-by-line output name]` (non-developers: run this through the command line)
+3. Split the comment by sentences: `python comment_splitter.py [comment input file] [line-by-line output name]` (non-developers: run this through the command line)
 4. (Optional) Manually edit the output file to adjust anything you want. For example, extra pauses when reading a comma-separated list or splitting after emojis.
-5. (Optional) Generate a test image of the full comment, so you can change the font size and image size and stuff: `py -3 comment_test_image.py [line-by-line input file] [png file output name]` (change the constants at the top of `comment_test_image.py` to see changes)
-6. Take that output and have it read aloud: `py -3 comment_to_speech.py [line-by-line input file] [mp4 file names]` (have a "$" in the MP4 name, because that's where the numbers will go)
+5. (Optional) Generate a test image of the full comment, so you can change the font size and image size and stuff: `python comment_test_image.py [line-by-line input file] [png file output name]` (change the constants at the top of `comment_test_image.py` to see changes)
+6. Take that output and have it read aloud: `python comment_to_speech.py [line-by-line input file] [mp4 file names]` (have a "$" in the MP4 name, because that's where the numbers will go)
 7. Note: To edit the parameters of the final output, you will need to edit the constants at the top of `comment_to_speech.py`.
 8. Throw the MP4 files into your favorite video editor and do what you want!
 9. (Optional) There's an AutoHotkey script included with this project (kdenlive_size_adjustment.ahk) to speed up editing in Kdenlive, since Kdenlive scales the video.
@@ -28,12 +28,17 @@ bad1|censored1
 bad2|censored2
 bad3|censored3
 ```
-Then `py -3 comment_splitter.py [input comment file] [split comment file] -c [censored words file]`
+Then `python comment_splitter.py [input comment file] [split comment file] -c [censored words file]`
 
 
 
 Speech different from image text:
-`py -3 comment_to_speech.py [line-by-line speech text input file] [mp4 file names] -t [line-by-line image text input file]`
+`python comment_to_speech.py [line-by-line speech text input file] [mp4 file names] -t [line-by-line image text input file]`
+
+
+
+Replace a single video:
+`python comment_to_speech.py [rest of args] -n [video number]`
 
 
 
@@ -63,7 +68,7 @@ optional arguments:
 
 
 comment_to_speech.py
-usage: comment_to_speech.py [-h] [-t input_text_file] input_speech_file output_mp4_files
+usage: comment_to_speech.py [-h] [-t input_text_file] [-n video_number] input_speech_file output_mp4_files
 
 positional arguments:
   input_speech_file    text to read aloud
@@ -72,6 +77,7 @@ positional arguments:
 optional arguments:
   -h, --help           show this help message and exit
   -t input_text_file   text to show on screen
+  -n video_number      update/generate a specific video
 
 
 
